--- a/Logistics/MainWindow.xaml
+++ b/Logistics/MainWindow.xaml
@@ -6,8 +6,7 @@
         xmlns:local="clr-namespace:Logistics"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" x:Class="Logistics.MainWindow"
         mc:Ignorable="d"
-        Title="Authorization" Height="200" Width="350" WindowStartupLocation="CenterScreen" 
-        WindowStyle="None" ResizeMode="NoResize" AllowsTransparency="True">
+        Title="Authorization" Height="200" Width="350">
     <Border BorderBrush="{StaticResource PrimaryHueLightBrush}" BorderThickness="1" >
         <Grid>
             <Grid.RowDefinitions>
