--- a/Logistics/LogistForms/LogistMainForm.xaml
+++ b/Logistics/LogistForms/LogistMainForm.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Logistics" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="LogistMainForm" Height="700" Width="1400" Loaded="WindowLoadedAsync">
+        Title="LogistMainForm" Height="700" Width="1400" Loaded="WindowLoaded">
     <Border BorderBrush="{StaticResource PrimaryHueLightBrush}" BorderThickness="1" >
         <Grid>
             <Grid.RowDefinitions>
@@ -44,12 +44,12 @@
                         </Grid>
                         <Grid Grid.Row="1">
                             <StackPanel Orientation="Horizontal" Margin="10,2">
-                                <Button Style="{StaticResource MaterialDesignFlatLightBgButton}" Width="190" Height="25" FontSize="12" Content="Сформировать заказ"/>
-                                <Button Style="{StaticResource MaterialDesignIconButton}" Margin="10,0" Background="{StaticResource PrimaryHueLightBrush}" Height="25" Width="25">
-                                    <materialDesign:PackIcon Kind="Edit" HorizontalAlignment="Center" VerticalAlignment="Center" Height="15" Width="15" Foreground="{StaticResource  MaterialDesignBackground}"/>
+                                <Button Style="{StaticResource MaterialDesignFlatLightBgButton}" Width="190" Height="30" FontSize="12" Content="Сформировать заказ"/>
+                                <Button Style="{StaticResource MaterialDesignIconButton}" Margin="10,0" Background="{StaticResource PrimaryHueLightBrush}" Height="30" Width="30">
+                                    <materialDesign:PackIcon Kind="Edit" HorizontalAlignment="Center" VerticalAlignment="Center" Height="20" Width="20" Foreground="{StaticResource  MaterialDesignBackground}"/>
                                 </Button>
-                                <Button Style="{StaticResource MaterialDesignIconButton}" Background="{StaticResource PrimaryHueLightBrush}" Height="25" Width="25">
-                                    <materialDesign:PackIcon Kind="Trash" HorizontalAlignment="Center" VerticalAlignment="Center" Height="15" Width="15" Foreground="{StaticResource  MaterialDesignBackground}"/>
+                                <Button Style="{StaticResource MaterialDesignIconButton}" Background="{StaticResource PrimaryHueLightBrush}" Height="30" Width="30">
+                                    <materialDesign:PackIcon Kind="Trash" HorizontalAlignment="Center" VerticalAlignment="Center" Height="20" Width="20" Foreground="{StaticResource  MaterialDesignBackground}"/>
                                 </Button>
                             </StackPanel>
                         </Grid>
@@ -66,7 +66,16 @@
                                 Foreground="{Binding BorderBrush, ElementName=searchTb}"/>
                             </Grid>
                             <Grid Grid.Column="1">
-                                <TextBox Height="35" TextChanged="SearchOrderTbTextChanged" VerticalContentAlignment="Center" x:Name="searchOrderTb" materialDesign:HintAssist.Hint="Поиск" Style="{StaticResource MaterialDesignTextBox}" materialDesign:TextFieldAssist.HasClearButton="True"/>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid Grid.Column="0">
+                                    <TextBox Height="30" VerticalContentAlignment="Center" TextChanged="SearchOrderTextChanged" x:Name="searchOrderTb" materialDesign:HintAssist.Hint="Поиск" Style="{StaticResource MaterialDesignTextBox}" materialDesign:TextFieldAssist.HasClearButton="True"/>
+                                </Grid>
+                                <Grid Grid.Column="1">
+                                    <Button Style="{StaticResource MaterialDesignFlatLightBgButton}"  Click="SearchOrderBtnClick" Margin="5,0,0,0" Width="120" Height="30" FontSize="12" Content="Найти"/>
+                                </Grid>
                             </Grid>
                         </Grid>
                     </Grid>
@@ -178,7 +187,16 @@
                                 Foreground="{Binding BorderBrush, ElementName=searchTb}"/>
                             </Grid>
                             <Grid Grid.Column="1">
-                                <TextBox Height="35" x:Name="searchCargoTb" VerticalContentAlignment="Center" materialDesign:HintAssist.Hint="Поиск" Style="{StaticResource MaterialDesignTextBox}" materialDesign:TextFieldAssist.HasClearButton="True"/>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid Grid.Column="0">
+                                    <TextBox Height="30" VerticalContentAlignment="Center" x:Name="searchCargoTb" materialDesign:HintAssist.Hint="Поиск" Style="{StaticResource MaterialDesignTextBox}" materialDesign:TextFieldAssist.HasClearButton="True"/>
+                                </Grid>
+                                <Grid Grid.Column="1">
+                                    <Button Style="{StaticResource MaterialDesignFlatLightBgButton}" Click="SearchOrderBtnClick" Margin="5,0,0,0" Width="120" Height="30" FontSize="12" Content="Найти"/>
+                                </Grid>
                             </Grid>
                         </Grid>
                     </Grid>
@@ -211,10 +229,10 @@
                         <Grid Grid.Column="1" Margin="0,10,10,10">
                             <StackPanel>
                                 <TextBlock FontSize="16"/>
-                                <TextBlock Text="pHolder" x:Name="cargoWeight" FontSize="14"/>
-                                <TextBlock Text="pHolder" x:Name="cargoLength" FontSize="14"/>
-                                <TextBlock Text="pHolder" x:Name="cargoWidth" FontSize="14"/>
-                                <TextBlock Text="pHolder" x:Name="cargoHeight" FontSize="14"/>
+                                <TextBlock x:Name="cargoWeight" FontSize="14"/>
+                                <TextBlock x:Name="cargoLength" FontSize="14"/>
+                                <TextBlock x:Name="cargoWidth" FontSize="14"/>
+                                <TextBlock x:Name="cargoHeight" FontSize="14"/>
                             </StackPanel>
                         </Grid>
                         <Grid Grid.Column="2" Margin="0,10,10,10">
