--- a/Logistics/LogistForms/LogistMainForm.xaml
+++ b/Logistics/LogistForms/LogistMainForm.xaml
@@ -188,15 +188,15 @@
                                             <StackPanel>
                                                 <TextBlock FontSize="18"/>
                                                 <TextBox                                      
-                                    Text="pHolder"
-                                    ToolTip="{Binding Path=Text, RelativeSource={RelativeSource Self}}"
-                                    x:Name="addressDestinationTb"
-                                    TextWrapping="Wrap"
-                                    VerticalAlignment="Stretch"
-                                    VerticalScrollBarVisibility="Auto"
-                                    SpellCheck.IsEnabled="True"
-                                    IsReadOnly="True"
-                                    Height="40"/>
+                                                Text="pHolder"
+                                                ToolTip="{Binding Path=Text, RelativeSource={RelativeSource Self}}"
+                                                x:Name="addressDestinationTb"
+                                                TextWrapping="Wrap"
+                                                VerticalAlignment="Stretch"
+                                                VerticalScrollBarVisibility="Auto"
+                                                SpellCheck.IsEnabled="True"
+                                                IsReadOnly="True"
+                                                Height="40"/>       
                                                 <TextBlock FontSize="18"/>
                                                 <TextBlock x:Name="fioDestinationTb" Text="pHolder" ToolTip="{Binding Path=Text, RelativeSource={RelativeSource Self}}" FontSize="14"/>
                                                 <TextBlock x:Name="numberDestinationTb" Text="pHolder" ToolTip="{Binding Path=Text, RelativeSource={RelativeSource Self}}" FontSize="14"/>
@@ -226,10 +226,10 @@
                                         </Grid.ColumnDefinitions>
                                         <Grid Grid.Column="0">
                                             <materialDesign:PackIcon VerticalAlignment="Center"
-                                Kind="Search"
-                                Height="20"
-                                Width="20"
-                                Foreground="{Binding BorderBrush, ElementName=searchTb}"/>
+                                            Kind="Search"
+                                            Height="20"
+                                            Width="20"
+                                            Foreground="{Binding BorderBrush, ElementName=searchTb}"/>
                                         </Grid>
                                         <Grid Grid.Column="1">
                                             <Grid.ColumnDefinitions>
@@ -237,10 +237,10 @@
                                                 <ColumnDefinition Width="auto"/>
                                             </Grid.ColumnDefinitions>
                                             <Grid Grid.Column="0">
-                                                <TextBox Height="30" VerticalContentAlignment="Center" x:Name="searchCargoTb" materialDesign:HintAssist.Hint="Поиск" Style="{StaticResource MaterialDesignTextBox}" materialDesign:TextFieldAssist.HasClearButton="True"/>
+                                                <TextBox Height="30" VerticalContentAlignment="Center" x:Name="searchCargoTb" TextChanged="SearchCargoTbTextChanged" materialDesign:HintAssist.Hint="Поиск" Style="{StaticResource MaterialDesignTextBox}" materialDesign:TextFieldAssist.HasClearButton="True"/>
                                             </Grid>
                                             <Grid Grid.Column="1">
-                                                <Button Style="{StaticResource MaterialDesignFlatLightBgButton}" Padding="0,-3,0,0" Margin="5,0,0,0" Width="120" Height="30" FontSize="12" Content="Найти"/>
+                                                <Button Style="{StaticResource MaterialDesignFlatLightBgButton}" Click="SearchCargoClick"  Padding="0,-3,0,0" Margin="5,0,0,0" Width="120" Height="30" FontSize="12" Content="Найти"/>
                                             </Grid>
                                         </Grid>
                                     </Grid>
@@ -296,8 +296,8 @@
                     <TabItem>
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
+                                <ColumnDefinition Width="2*"/>
+                                <ColumnDefinition Width="3*"/>
                             </Grid.ColumnDefinitions>
                             <Grid Grid.Column="0" >
                                 <Grid.RowDefinitions>
@@ -316,7 +316,7 @@
                                     </Grid>
                                     <Grid Grid.Row="1">
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition/>
+                                            <ColumnDefinition Width="auto"/>
                                             <ColumnDefinition/>
                                         </Grid.ColumnDefinitions>
                                         <Grid Grid.Column="0">
@@ -357,16 +357,16 @@
                                                 <ColumnDefinition Width="auto"/>
                                             </Grid.ColumnDefinitions>
                                             <Grid Grid.Column="0">
-                                                <TextBox Height="30" VerticalContentAlignment="Center" materialDesign:HintAssist.Hint="Поиск" Style="{StaticResource MaterialDesignTextBox}" materialDesign:TextFieldAssist.HasClearButton="True"/>
+                                                <TextBox Height="30" VerticalContentAlignment="Center" Name="routeDtSearch" TextChanged="RouteDtSearchTextChanged" materialDesign:HintAssist.Hint="Поиск" Style="{StaticResource MaterialDesignTextBox}" materialDesign:TextFieldAssist.HasClearButton="True"/>
                                             </Grid>
                                             <Grid Grid.Column="1">
-                                                <Button Style="{StaticResource MaterialDesignFlatLightBgButton}" Padding="0,-3,0,0" Margin="5,0,0,0" Width="120" Height="30" FontSize="12" Content="Найти"/>
+                                                <Button Style="{StaticResource MaterialDesignFlatLightBgButton}" Click="SearchRouteClick" Padding="0,-3,0,0" Margin="5,0,0,0" Width="120" Height="30" FontSize="12" Content="Найти"/>
                                             </Grid>
                                         </Grid>
                                     </Grid>
                                 </Grid>
                                 <Grid Grid.Row="1">
-                                    <DataGrid Name="routeDt" MinColumnWidth="50" MaxColumnWidth="300" CanUserAddRows="False" IsReadOnly="True" AutoGenerateColumns="False" ColumnWidth="170" Margin="10" CanUserDeleteRows="False">
+                                    <DataGrid Name="routeDt" SelectionChanged="RouteDtSelectionChanged" MinColumnWidth="50" MaxColumnWidth="300" CanUserAddRows="False" IsReadOnly="True" AutoGenerateColumns="False" ColumnWidth="170" Margin="10" CanUserDeleteRows="False">
                                         <DataGrid.Columns>
                                             <DataGridTextColumn Header="Номер" Binding="{Binding Id}"/>
                                             <DataGridTextColumn Header="Транспорт" Binding="{Binding TruckRegistrationNumber}"/>
@@ -389,8 +389,8 @@
                                         <Grid Grid.Column="1" Margin="10">
                                         <StackPanel>
                                             <TextBlock FontSize="16"/>
-                                            <TextBlock Text="pHolder" ToolTip="{Binding Path=Text, RelativeSource={RelativeSource Self}}"  FontSize="14"/>
-                                            <TextBlock Text="pHolder" ToolTip="{Binding Path=Text, RelativeSource={RelativeSource Self}}" FontSize="14"/>
+                                            <TextBlock Text="pHolder" Name="driverFIO" ToolTip="{Binding Path=Text, RelativeSource={RelativeSource Self}}"  FontSize="14"/>
+                                            <TextBlock Text="pHolder" Name="driverNumber" ToolTip="{Binding Path=Text, RelativeSource={RelativeSource Self}}" FontSize="14"/>
                                         </StackPanel>
                                     </Grid>
                                 </Grid>
@@ -405,11 +405,27 @@
                                     <Grid.RowDefinitions>
                                         <RowDefinition/>
                                         <RowDefinition/>
+                                        <RowDefinition/>
                                     </Grid.RowDefinitions>
                                     <Grid Grid.Row="0">
-                                        <TextBlock Text="МАРШРУТНЫЕ ЛИСТЫ" Margin="10,20,0,0" FontSize="30" Foreground="{StaticResource MaterialDesignTextAreaBorder}" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"/>
+                                        <TextBlock Text="ГРУЗЫ" Margin="10,20,0,0" FontSize="30" Foreground="{StaticResource MaterialDesignTextAreaBorder}" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"/>
                                     </Grid>
-                                    <Grid Grid.Row="1" Margin="10,2">
+                                    <Grid Grid.Row="1">
+                                        <materialDesign:PopupBox Margin="10,0" StaysOpen="True">
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition/>
+                                                    <RowDefinition/>
+                                                </Grid.RowDefinitions>
+                                                <Grid Grid.Row="0">
+                                                    <StackPanel Margin="5">
+                                                        
+                                                    </StackPanel>
+                                                </Grid>
+                                            </Grid>
+                                        </materialDesign:PopupBox>
+                                    </Grid>
+                                    <Grid Grid.Row="2" Margin="10,2">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="auto"/>
                                             <ColumnDefinition/>
@@ -427,21 +443,22 @@
                                                 <ColumnDefinition Width="auto"/>
                                             </Grid.ColumnDefinitions>
                                             <Grid Grid.Column="0">
-                                                <TextBox Height="30" VerticalContentAlignment="Center" materialDesign:HintAssist.Hint="Поиск" Style="{StaticResource MaterialDesignTextBox}" materialDesign:TextFieldAssist.HasClearButton="True"/>
+                                                <TextBox Height="30" VerticalContentAlignment="Center" Name="routeCargoDtSearch" TextChanged="RouteCargoDtSearchTextChanged" materialDesign:HintAssist.Hint="Поиск" Style="{StaticResource MaterialDesignTextBox}" materialDesign:TextFieldAssist.HasClearButton="True"/>
                                             </Grid>
                                             <Grid Grid.Column="1">
-                                                <Button Style="{StaticResource MaterialDesignFlatLightBgButton}" Padding="0,-3,0,0" Margin="5,0,0,0" Width="120" Height="30" FontSize="12" Content="Найти"/>
+                                                <Button Style="{StaticResource MaterialDesignFlatLightBgButton}" Click="RouteCargoSearchClick" Padding="0,-3,0,0" Margin="5,0,0,0" Width="120" Height="30" FontSize="12" Content="Найти"/>
                                             </Grid>
                                         </Grid>
                                     </Grid>
                                 </Grid>
                                 <Grid Grid.Row="1">
-                                    <DataGrid Name="routeCargoDt" MinColumnWidth="50" MaxColumnWidth="300" CanUserAddRows="False" IsReadOnly="True" AutoGenerateColumns="False" ColumnWidth="170" Margin="10" CanUserDeleteRows="False">
+                                    <DataGrid Name="routeCargoDt" SelectionChanged="RouteCargoDtSelectionChanged" MinColumnWidth="50" MaxColumnWidth="300" CanUserAddRows="False" IsReadOnly="True" AutoGenerateColumns="False" ColumnWidth="170" Margin="10" CanUserDeleteRows="False">
                                         <DataGrid.Columns>
-                                            <DataGridTextColumn Header="Номер" Binding="{Binding Id}"/>
-                                            <DataGridTextColumn Header="Отправитель" Binding="{Binding Sender}"/>
-                                            <DataGridTextColumn Header="Получатель" Binding="{Binding Destination}"/>
-                                            <DataGridTextColumn Header="Статус" Binding="{Binding Status}"/>
+                                            <DataGridTextColumn Header="Номер груза" Binding="{Binding Id}"/>
+                                            <DataGridTextColumn Header="Номер заказа" Binding="{Binding OrderId}"/>
+                                            <DataGridTextColumn Header="Наименование" Binding="{Binding Title}"/>
+                                            <DataGridTextColumn Header="Дата отбытия" Binding="{Binding DepartureDate}"/>
+                                            <DataGridTextColumn Header="Дата прибытия" Binding="{Binding ArrivalDate}"/>
                                         </DataGrid.Columns>
                                     </DataGrid>
                                 </Grid>
