--- a/Logistics/LogistForms/temp.xaml
+++ b/Logistics/LogistForms/temp.xaml
@@ -26,7 +26,7 @@
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1" Height="25" Margin="5">
-            <Button Content="Применить" Padding="0,0,5s,0"/>
+            <Button Content="Применить" Padding="0,0,5,0"/>
         </Grid>
     </Grid>
 </Window>
